# mu

./: Cargo.toml  README.md  amber.conf  ignore.linus
config/mu/: amber.conf  linus.conf  mu.conf
config/mu-hive/: ex.sh
src/: config.rs  data.rs  info.rs  lib.rs  main.rs  model.rs
templates/: index.html  machines.html  style.css
