[package]
name = "mu"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.99"
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "clock", "now"] }
clap = { version = "4.5.47", features = ["derive"] }
hostname = "0.4.1"
openssh = "0.11.5"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sysinfo = "0.37.0"
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread"] }
users = { version = "0.11.0", default-features = false }
